feat(video): add video preview endpoint and refactor recommendation service
- Add new `/info/{id}` endpoint to retrieve video details without incrementing view count
- Refactor RecommendationService to support both article and video recommendations
- Update algorithm service configuration with configurable timeout and URL
- Simplify recommendation logic with graceful degradation to database queries
- Improve service health checks and model retraining endpoints
- Add ObjectMapper for JSON processing in recommendation responses
- Enhance VideoController with preview functionality for better UX